# dndml

./: .common.mk  .errcheck_exclude  Makefile  go.mod  go.sum  main.go  pyproject.toml  requirements-dev.txt  requirements.txt
cmd/: dndbeyond.go  root.go
internal/dndbeyond/: trait.go
internal/dndml/: dndml.go  identifier.go  identifier_test.go  parse.go  registry.go  unmarshal.go
internal/dndml/dndmlfakes/: fake_object.go  fake_renderable.go
internal/dndml/testdata/: trait.yaml
internal/ref/: ref.go
pkg/dndml/: obj.pb.go  obj.proto  obj_pb2.py  roll.ext.go  roll.pb.go  roll.proto  roll_pb2.py  trait.ext.go  trait.pb.go  trait.proto  trait_pb2.py  uses.pb.go  uses.proto  uses_pb2.py
pkg/dndml/enums/: enums.ext.go  enums.ext_test.go  enums.pb.go  enums.proto  enums_pb2.py
pkg/dndml/v5/: stats.pb.go  stats.proto  stats_pb2.py  trait.pb.go  trait.proto  trait_pb2.py  uses.pb.go  uses.proto  uses_pb2.py
pkg/dndml/v5/bkp/: action.proto  creature.proto  creature_pb2.py  enums.proto
pkg/dndml/v5/enums/: enums.ext.go  enums.ext_test.go  enums.pb.go  enums.proto  enums_pb2.py
src/dndml/: enum.py  manifest.py  proficiency.py  registry.py  server.py  skills.py  stats.py
tests/data/var/dndml/: trait.yaml
tools/: tools.go
var/dndml/: server.py
var/dndml/traits/: 5e.yaml
